Fixes to header attachment upload component (#1436)
The upload component now displays several upload-related server-side errors including when a file is too big and when it is the wrong type.

This commit also fixes a minor display bug in some versions of Chrome - other versions unaffected by the change.

CV2-2873

--- a/src/app/components/cds/inputs/DatePicker.module.css
+++ b/src/app/components/cds/inputs/DatePicker.module.css
@@ -16,7 +16,6 @@
   border-radius: 8px;
   color: var(--textPrimary);
   font: 400 14px var(--fontStackSans);
-  height: 100%;
   letter-spacing: .15px;
   line-height: 20px;
   padding: 10px;
